--- a/Bridge.Compiler/Bridge.Compiler.csproj
+++ b/Bridge.Compiler/Bridge.Compiler.csproj
@@ -13,6 +13,10 @@
     <FileAlignment>512</FileAlignment>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <!-- Download the nuget.exe if it is not present in .nuget/ -->
+    <DownloadNuGetExe>true</DownloadNuGetExe>
+    <!-- Restore Nuget packages on build, using NuGet.target rules. -->
+    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -47,6 +51,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Bridge.Min.16.5.0\build\Bridge.Min.targets" Condition="Exists('..\packages\Bridge.Min.16.5.0\build\Bridge.Min.targets')" />
+  <Import Project="$(SolutionDir).nuget\NuGet.targets" Condition="Exists('$(SolutionDir).nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
