Fixes wrong tools/ folder references.
A 'Constants' class was created to hold constants valid throughout the
project, and 'AssembliesFolder' pointing to 'tools'. And wherever used
either "Core" or "tools" was then changed to use this 'AssembliesFolder'
variable.

--- a/Bridge/Bridge.CLI.csproj
+++ b/Bridge/Bridge.CLI.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <Compile Include="AssemblyResolver.cs" />
     <Compile Include="ConsoleSpinner.cs" />
+    <Compile Include="Constants.cs" />
     <Compile Include="Program.Types.cs" />
     <Compile Include="Program.Console.cs" />
     <Compile Include="Program.Assemblies.cs" />
