--- a/Bridge/Bridge.CLI.csproj
+++ b/Bridge/Bridge.CLI.csproj
@@ -65,12 +65,14 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <None Include="Bridge\templates\classlib\packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include=".build\templates\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
-    <PostBuildEvent>XCOPY "$(ProjectDir)Bridge\templates" "$(TargetDir)\templates\" /E /Y
+    <PostBuildEvent>XCOPY "$(ProjectDir).build\templates" "$(TargetDir)\templates\" /E /Y
 XCOPY "$(SolutionDir)packages\Bridge.Min.16.5.0\tools" "$(TargetDir)\tools\" /E /Y
 move /-y "$(TargetDir)\bridge.pdb" "$(TargetDir)\tools\"</PostBuildEvent>
   </PropertyGroup>
