Improvements and fixes

--- a/Bridge/Bridge.CLI.csproj
+++ b/Bridge/Bridge.CLI.csproj
@@ -74,6 +74,7 @@
     <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
     <PostBuildEvent>XCOPY "$(ProjectDir).build\templates" "$(TargetDir)\templates\" /E /Y
 XCOPY "$(SolutionDir)packages\Bridge.Min.16.5.0\tools" "$(TargetDir)\tools\" /E /Y
+XCOPY "$(SolutionDir)packages\Bridge.Core.16.5.0\lib\net40" "$(TargetDir)\lib\" /E /Y
 move /-y "$(TargetDir)\bridge.pdb" "$(TargetDir)\tools\"</PostBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
