--- a/Bridge/Bridge.CLI.csproj
+++ b/Bridge/Bridge.CLI.csproj
@@ -72,7 +72,8 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
-    <PostBuildEvent>XCOPY "$(ProjectDir).build\templates" "$(TargetDir)\templates\" /E /Y
+    <PostBuildEvent>:: Post-build event commands
+XCOPY "$(ProjectDir).build\templates" "$(TargetDir)\templates\" /E /Y
 XCOPY "$(SolutionDir)packages\Bridge.Min.16.5.0\tools" "$(TargetDir)\tools\" /E /Y
 XCOPY "$(SolutionDir)packages\Bridge.Core.16.5.0\lib\net40" "$(TargetDir)\lib\" /E /Y
 move /-y "$(TargetDir)\bridge.pdb" "$(TargetDir)\tools\"
