--- a/Bridge/Bridge.CLI.csproj
+++ b/Bridge/Bridge.CLI.csproj
@@ -84,7 +84,7 @@ XCOPY "$(SolutionDir)packages\Bridge.Min.16.5.0\tools" "$(TargetDir)\tools\" /E 
 XCOPY "$(SolutionDir)packages\Bridge.Core.16.5.0\lib\net40" "$(TargetDir)\lib\" /E /Y
 move /-y "$(TargetDir)\bridge.pdb" "$(TargetDir)\tools\"
 
-$(SolutionDir)installer\windows\build-installer.bat "$(Configuration)"</PostBuildEvent>
+"$(SolutionDir)installer\windows\build-installer.bat" "$(Configuration)"</PostBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
     <PreBuildEvent>
