--- a/Bridge/.build/templates/classlib/.vscode/tasks.json
+++ b/Bridge/.build/templates/classlib/.vscode/tasks.json
@@ -1,23 +1,23 @@
 {
-    // See https://go.microsoft.com/fwlink/?LinkId=733558
-    // for the documentation about the tasks.json format
-    "version": "2.0.0",
-    "tasks": [
-        {
-            "taskName": "bridge",
-            "type": "shell",
-            "command": "mono ../bridge.exe build",
-            "windows": {
-                "command": "..\\bridge build"
-            },
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            },
-          "presentation": {
-            "reveal": "never",
-            "panel": "shared"
-          }
-        }
-    ]
+  // See https://go.microsoft.com/fwlink/?LinkId=733558
+  // for the documentation about the tasks.json format
+  "version": "2.0.0",
+  "tasks": [
+    {
+      "taskName": "bridge",
+      "type": "shell",
+      "command": "bridge build",
+      "windows": {
+        "command": "bridge build"
+      },
+      "group": {
+        "kind": "build",
+        "isDefault": true
+      },
+      "presentation": {
+        "reveal": "never",
+        "panel": "shared"
+      }
+    }
+  ]
 }
