--- a/Bridge/Bridge.CLI.csproj
+++ b/Bridge/Bridge.CLI.csproj
@@ -59,6 +59,7 @@
     <Compile Include="AssemblyResolver.cs" />
     <Compile Include="ConsoleSpinner.cs" />
     <Compile Include="Constants.cs" />
+    <Compile Include="PackageRequestResult.cs" />
     <Compile Include="Program.Types.cs" />
     <Compile Include="Program.Console.cs" />
     <Compile Include="Program.Assemblies.cs" />
