--- a/Bridge.Compiler/Bridge.Compiler.csproj
+++ b/Bridge.Compiler/Bridge.Compiler.csproj
@@ -45,6 +45,10 @@
       <HintPath>..\packages\Bridge.Core.16.5.0\lib\net40\Bridge.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Bridge.Activator, Version=1.0.0.0, Culture=neutral, PublicKeyToken=309acb0757755617, processorArchitecture=MSIL">
+      <HintPath>..\packages\Bridge.Activator.1.0.0\lib\net452\Bridge.Activator.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -57,7 +61,7 @@
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
     <Error Condition="!Exists('..\packages\Bridge.Min.16.5.0\build\Bridge.Min.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Bridge.Min.16.5.0\build\Bridge.Min.targets'))" />
-  </Target>  
+  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
