--- a/Bridge.Compiler/packages.config
+++ b/Bridge.Compiler/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Bridge.Activator" version="1.0.0" targetFramework="net452" />
   <package id="Bridge.Core" version="16.5.0" targetFramework="net452" />
   <package id="Bridge.Min" version="16.5.0" targetFramework="net452" />
 </packages>
