--- a/Bridge/.build/templates/classlib/.vscode/tasks.json
+++ b/Bridge/.build/templates/classlib/.vscode/tasks.json
@@ -4,7 +4,7 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "taskName": "bridge",
+      "label": "bridge",
       "type": "shell",
       "command": "bridge build",
       "windows": {
