--- a/.gitignore
+++ b/.gitignore
@@ -289,3 +289,8 @@ __pycache__/
 
 # NSIS ouput installer's executable
 installer/windows/*.exe
+
+# Ignores installer packages' extensions
+*.zip
+*.dmg
+*.pkg
